learn css/scss modules

--- a/react-theory/src/components/Cars/Car.css
+++ b/react-theory/src/components/Cars/Car.css
@@ -1,9 +1,7 @@
-$padding: 10px;
-
 .Car {
     margin-bottom: 10px;
     display: block;
-    padding: $padding;
+    padding: 10px;
     border-radius: 5px;
     transition: border, box-shadow .3s;
 }
