--- a/react-theory/src/components/cars/Car.css
+++ b/react-theory/src/components/cars/Car.css
@@ -4,6 +4,14 @@
     padding: 10px;
     border-radius: 5px;
     transition: border, box-shadow .3s;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14);
+}
+
+.Car:hover {
+    border: 1px solid #aaa;
+    box-shadow: 0 4px 15px 0 rgba(0, 0, 0, .34);
+    cursor: pointer;
 }
 
 .input {}
