make forms validation

--- a/react-quiz/src/containers/QuizList/QuizList.css
+++ b/react-quiz/src/containers/QuizList/QuizList.css
@@ -4,7 +4,7 @@
     padding-top: 100px;
     flex-grow: 1;
     width: 100%;
-    background: linear-gradient(90deg, #fd8355 0%, #f0576c 37%, #f79cbd 100%);
+    background: linear-gradient(90deg, #ff9269 0%, #f65a70 47%, #f79cd9 100%);
 }
 
 .QuizList h1 {
