--- a/react-quiz/src/containers/Quiz/Quiz.css
+++ b/react-quiz/src/containers/Quiz/Quiz.css
@@ -4,7 +4,7 @@
     padding-top: 100px;
     flex-grow: 1;
     width: 100%;
-    background: linear-gradient(90deg, #5041b2 0%, #7969e6 100%);
+    background: linear-gradient(90deg, #3ea3fc 0%, #5041b2 50%, #9f5eff 100%);
 }
 
 .Quiz h1 {
