make adding question

--- a/react-quiz/src/components/Ui/Button/Button.css
+++ b/react-quiz/src/components/Ui/Button/Button.css
@@ -17,6 +17,10 @@
     box-shadow: inset 2px 2px 1px rgba(0, 0, 0, .3);
 }
 
+.Button:hover {
+    cursor: pointer;
+}
+
 .Button:disabled {
     background: #ccc;
     color: #000;
