make animation with CSSTransition

--- a/react-animation/src/index.css
+++ b/react-animation/src/index.css
@@ -56,6 +56,32 @@ code {
     background: coral;
 }
 
+.os-enter {
+    opacity: 0;
+}
+
+.os-enter-active {
+    opacity: 1;
+    transition: opacity 1s;
+}
+
+/*.os-enter-done {*/
+/*  transform: translateX(0);*/
+/*}*/
+
+.os-exit {
+    opacity: 1;
+}
+
+.os-exit-active {
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.os-exit-done {
+    opacity: 0;
+}
+
 @keyframes square {
     0% {
         opacity: 0;
